network-policies/egress-demo-2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress
spec:
  podSelector:
    matchLabels:
      app: hello
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
  policyTypes:
    - Egress
