network-policies/egress-demo.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress
spec:
  podSelector:
    matchLabels:
      run: busy
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: hello
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
