network-policies/hello-allow-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello
spec:
  podSelector:
    matchLabels:
      app: hello
  ingress:
    - from:
      - podSelector:
          matchLabels:
            hello: ok
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: test
        podSelector:
          matchLabels:
            hello: ok
